--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "hamburger-react": "^2.5.0",
     "jest": "^28.1.3",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "recharts": "^2.1.13",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
+    "use-state-with-callback": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
