--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "enzyme": "^3.11.0",
     "hamburger-react": "^2.5.0",
     "jest": "^28.1.3",
     "react": "^18.2.0",
