--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "enzyme": "^3.11.0",
+    "formik": "^2.2.9",
     "hamburger-react": "^2.5.0",
     "jest": "^28.1.3",
     "react": "^18.2.0",
