--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "use-state-with-callback": "^3.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
