--- a/gerna-group-server/package.json
+++ b/gerna-group-server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "heroku": "^8.6.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^3.0.1"
