--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://BaczkiewiczDawid.github.io/GERNA-Group",
   "name": "gerna-group",
   "version": "0.1.0",
   "private": true,
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "gh-pages": "^6.0.0",
     "ts-jest": "^28.0.7"
   }
 }
