--- a/gerna-group-server/package.json
+++ b/gerna-group-server/package.json
@@ -18,6 +18,7 @@
     "heroku": "^8.6.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.8",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
